--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Askme</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <meta charset="utf-8"/>
+    <title>Хорошие вопросы от GP</title>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all'%>
+    <%= javascript_pack_tag 'application'%>
+    <%= csrf_meta_tags %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+  <div class="header">
+    <div class="container">
+      <div class="header-logo">
+        <h1 class="header-title"><%= link_to 'Хорошие вопросы от GP', root_path %></h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <div class="container">
+      <%= yield %>
+    </div>
+  </div>
+</body>
 </html>
