--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <title>Хорошие вопросы от GP</title>
 
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <%= stylesheet_pack_tag 'application', media: 'all'%>
     <%= javascript_pack_tag 'application'%>
     <%= csrf_meta_tags %>
