--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,20 +11,31 @@
     <%= image_tag user_avatar(@user), class: 'user-image', alt: '[Фото]' %>
   </div>
 
-<!--   <h2 class="title-small buffer-both">
+  <h2 class="title-small buffer-both">
     #<%= @user.username %>
-  </h2> -->
+  </h2>
+</div>
 
+<div class="user-details">
   <div class="user-ask-button container text-center">
     <%= link_to "Задать вопрос", '', class: 'button button-light', id: 'ask-button' %>
   </div>
 
-  <div class="user-statistics text-center">
-    Пользователю #<%= @user.username %>
-    <%= user_questions_count(@questions.count, 'вопросов на задавали, будьте первым!', 'задали') %><%= user_questions_count(@questions.reject(&:answer).count, '', ', осталось ответить на') %>
+  <div class="user-statistics container text-center">
+    <div class="column-1-3">
+      <h3 class="title-small"><%= @questions_count %></h1>
+      <p>вопросов</p>
+    </div>
+    <div class="column-1-3">
+      <h3 class="title-small"><%= @answers_count %></h1>
+      <p>ответов</p>
+    </div>
+    <div class="column-1-3">
+      <h3 class="title-small"><%= @unanswered_count %></h1>
+      <p>безответных</p>
+    </div>
   </div>
 </div>
-
 
 <div class="user-question-form-div column-1-4 column-1-4-right" id='ask-form'>
   <div class="user-question-form buffer-both">
