--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -52,5 +52,12 @@
         <%= f.submit 'Сохранить', class: 'button button-dark button-small' %>
       </div>
     <% end %>
+
+    <div class="form-action">
+      <%= link_to "Удалить профиль", user_path(@user),
+                  method: :delete,
+                  data: { confirm: 'Подтвердите удаление профиля' },
+                  class: 'button button-dark button-small' %>
+    </div>
   </div>
 </div>
