add link_to to author of question in parshal _question

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,7 +1,7 @@
 <div class="question">
   <div class="question-content">
     <div class="question-text text-lead">
-      <%= question.author.present? ? "#{question.author.name}(@#{question.author.username}) спрашивает: " : 'Анонимный вопрос: ' %>
+      <%= question.author.present? ? (link_to "#{question.author.name}(@#{question.author.username})", user_path(question.author)) + " спрашивает: " : 'Анонимный вопрос: ' %>
       <%= question.text %>
     </div>
 
