--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -5,7 +5,7 @@
         <% user = User.find(question.author_id) %>
         <%= (link_to "#{user.name}(@#{user.username})", user_path(user)) + " спрашивает: " %>
       <% else %>
-        <% 'Анонимный вопрос: ' %>
+        <%= 'Анонимный вопрос: ' %>
       <% end %>
       <%= question.text %>
     </div>
