--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,18 +7,11 @@
     <%= image_tag user_avatar(@user), class: 'user-image', alt: '[Фото]' %>
   </div>
 
-<!--   <h2 class="title-small buffer-both">
-    #<%= @user.username %>
-  </h2> -->
-
   <div class="user-ask-button container text-center">
     <%= link_to "Задать вопрос", '', class: 'button button-light', id: 'ask-button' %>
   </div>
 
-  <div class="user-statistics text-center">
-    Пользователю #<%= @user.username %>
-    <%= user_questions_count(@questions.count, 'вопросов на задавали, будьте первым!', 'задали') %><%= user_questions_count(@questions.reject(&:answer).count, ', нет вопросов без ответа!', ', осталось ответить на') %>
-  </div>
+  <%= render partial: 'user_questions_statistic' %>
 </div>
 
 
