ixed typo in parshal user_questions_statistic

--- a/app/views/users/_user_questions_statistic.html.erb
+++ b/app/views/users/_user_questions_statistic.html.erb
@@ -9,6 +9,6 @@
       <%= 'нет вопросов без ответа!' %>
     <% end %>
   <% else %>
-    <%= 'вопросов на задавали, будьте первым!' %>
+    <%= 'вопросы на задавали, будьте первым!' %>
   <% end %>
 </div>
