--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -18,6 +18,10 @@
     <div class="question-date">
       <%= l(question.created_at, format: :short) %>
     </div>
+
+    <div class="question-tags">
+      <%= question.tags.map { |t| link_to "\##{t.name}", tag_path(t) }.join(', ').html_safe %>
+    </div>
   </div>
 
   <% if question.user == current_user %>
