added tags to views users/index

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="question-tags">
-      <%= question.tags.map { |t| link_to "\##{t.name}", tag_path(t.name) }.join(', ').html_safe %>
+      <%= question.tags.map { |t| link_to "##{t.name}", tag_path(t.name) }.join(', ').html_safe %>
     </div>
   </div>
 
